Deleted image links

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2><a id="Mood-Board">Step 2: Create a Mood Board</a></h2>
     <p>After you've found inspiration, the next thing you'll want to do is create a mood board. This can be digital or in real life. The mood board is basically what you'll use to keep your inspiration for the character and save some elements you want for the outfit, hair, etc.<br><br>Here's my example:
     </p>
-  <a href="https://how-to-design-and-draw-a-character.ellakc.repl.co/Mood%20board.jpg" target="blank"><img src="Mood board.jpg" alt="My mood board"></a>
+  <img src="Mood board.jpg" alt="My mood board">
 
 <!--Step 3-->
   <h2><a id="Start">Step 3: Let's start!</a></h2>
@@ -59,47 +59,47 @@
 <!--Step 4-->
   <h2><a id="rough-sketches">Step 4: Rough sketches</a></h2>
     <p>The first thing we'll do is create some rough sketches of the character. For example, these will decide the body type, basic shapes etc.</p>
-    <a href="https://how-to-design-and-draw-a-character.ellakc.repl.co/Rough%20sketches.jpg" target="blank"><img src="Rough sketches.jpg" alt="My rough sketches"></a>
+    <img src="Rough sketches.jpg" alt="My rough sketches">
 
 <!--Step 5-->
   <h2><a id="Refine">Step 5: Refine your sketches</a></h2>
     <p>Now you have some rough sketches of your character. This will give you a guide for the next stage, which is refining your sketches. This means you'll add details and refine certain parts. If you're designing your character digitally, do this stage on a new layer. If you're designing your character traditionally, lightly erase your rough sketches so that you can still see them but they don't overpower the new ones.</p>
-    <a href="https://how-to-design-and-draw-a-character.ellakc.repl.co/Refined%20sketches.jpg" target="blank"><img src="Refined sketches.jpg" alt="My refined sketches"></a>
+    <img src="Refined sketches.jpg" alt="My refined sketches">
 
 <!--Step 6-->
   <h2><a id="Lineart">Step 6: Lineart</a></h2>
     <p>If you don't use lineart, you can skip this step! <br><br>If you do use lineart, do your lineart on top of the refined sketches.</p>
-    <a href="https://how-to-design-and-draw-a-character.ellakc.repl.co/Lineart.jpg" target="blank"><img src="Lineart.jpg" alt="My lineart"></a>
+    <img src="Lineart.jpg" alt="My lineart">
 
 <!--Step 7-->
   <h2><a id="base-colors">Step 7: Base Colors</a></h2>
     <p>After you do your lineart (or if you don't use lineart in your art style), the next step is filling in your base colors. This means flat colors: no lighting just yet.</p>
-    <a href="https://427e3688-f7fb-4d23-b381-1f5f3a7468dc.id.repl.co/Base.jpg" target="blank"><img src="Base.jpg" alt="My lineart with base colors"></a>
+    <img src="Base.jpg" alt="My lineart with base colors">
 
 <!--Step 8-->
   <h2><a id="color-lineart">Step 8: Color your lineart</a></h2>
     <p>If you didn't do lineart, you can skip this step! <br><br>If you do lineart and you're a digital artist, your next step is to color your lineart. This step is optional of course; it's just an effect I like to add to my digital art. To do it, create a new layer on top of your lineart. Set it to clipping and you're good to go! You can do different colors for different parts or keep it all the same. Whatever you like.</p>
-    <a href="https://427e3688-f7fb-4d23-b381-1f5f3a7468dc.id.repl.co/color-lineart.jpg" target="blank" alt="My Colored lineart with base colors"><img src="color-lineart.jpg"></a>
+    <img src="color-lineart.jpg">
 
 <!--Step 9--> 
   <h2><a id="shading">Step 9: Shading</a></h2>
     <p>Now that you have your base colors, you can start shading! For traditional artists, this is pretty easy. Just shade on top of your colors. For digital artists, create a new layer on top of your base colors and set it to clipping. Then set it to multiply. Or, if you want soft shading, keep it on normal and use a darker color.</p>    
-    <a href="https://427e3688-f7fb-4d23-b381-1f5f3a7468dc.id.repl.co/Shade.jpg" target="blank" alt="My Colored lineart with base colors and shading"><img src="Shade.jpg"></a>
+    <img src="Shade.jpg">
 
 <!--Step 10-->
   <h2><a id="lighting">Step 10: Lighting</a></h2>
     <p>Now you can add some lighting! This step can come before the shading, of course, but I usually do it after so that I don't go overboard. For traditional artists, adding lighting to your character depends on the medium you're using. For digital artists, add a new layer, set it to clipping, and set the blending mode to a mode that makes it lighter. This can be add, overlay or whatever you like to use. If you want soft lighting, keep the blending mode on normal and pick a lighter color.</p>
-    <a href="https://427e3688-f7fb-4d23-b381-1f5f3a7468dc.id.repl.co/Light.jpg" target="blank" alt="My Colored lineart with base colors, shading and lighting"><img src="Light.jpg"></a>
+     <img src="Light.jpg">
 
 <!--Step 11-->
   <h2><a id="finishing">Step 11: Finishing touches</a></h2>
     <p>Now add some finishing touches to your character! This can be anything you like. It's up to the artist. For me, I like adding a gradient overlay and some noise on top of my digital art. For my traditional art, I add some highlights with a white gel pen.</p>
-    <a href="https://427e3688-f7fb-4d23-b381-1f5f3a7468dc.id.repl.co/Last%20touches.jpg" target="blank" alt="Finished artwork"><img src="Last touches.jpg"></a>
+    <img src="Last touches.jpg">
 
 <!--Step 12-->
   <h2><a id="sign">Step 12: Sign your artwork!</a></h2>
     <p>Last but not least, sign your artwork!</p>
-    <a href="https://427e3688-f7fb-4d23-b381-1f5f3a7468dc.id.repl.co/Sign.jpg" target="blank" alt="Finished artwork with signature"><img src="Sign.jpg"></a>
+    <img src="Sign.jpg">
 
 <!--Congrats-->
   <h5 class="congrats">Congratulations!<br>You've created your very own character!</h5>
