added alt to shade and uploaded shade file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <!--Step 9--> 
   <h2><a id="shading">Step 9: Shading</a></h2>
     <p>Now that you have your base colors, you can start shading! For traditional artists, this is pretty easy. Just shade on top of your colors. For digital artists, create a new layer on top of your base colors and set it to clipping. Then set it to multiply. Or, if you want soft shading, keep it on normal and use a darker color.</p>    
-    <img src="Shade.jpg">
+    <img src="Shade.jpg" alt="My lineart with base colors and shading">
 
 <!--Step 10-->
   <h2><a id="lighting">Step 10: Lighting</a></h2>
