added sign.jpg and alts to some images

--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
 <!--Step 10-->
   <h2><a id="lighting">Step 10: Lighting</a></h2>
     <p>Now you can add some lighting! This step can come before the shading, of course, but I usually do it after so that I don't go overboard. For traditional artists, adding lighting to your character depends on the medium you're using. For digital artists, add a new layer, set it to clipping, and set the blending mode to a mode that makes it lighter. This can be add, overlay or whatever you like to use. If you want soft lighting, keep the blending mode on normal and pick a lighter color.</p>
-     <img src="Light.jpg">
+     <img src="Light.jpg" alt="My lineart with base colors, shading and lighting">
 
 <!--Step 11-->
   <h2><a id="finishing">Step 11: Finishing touches</a></h2>
     <p>Now add some finishing touches to your character! This can be anything you like. It's up to the artist. For me, I like adding a gradient overlay and some noise on top of my digital art. For my traditional art, I add some highlights with a white gel pen.</p>
-    <img src="Last touches.jpg">
+    <img src="Last touches.jpg" alt="Finished artwork">
 
 <!--Step 12-->
   <h2><a id="sign">Step 12: Sign your artwork!</a></h2>
     <p>Last but not least, sign your artwork!</p>
-    <img src="Sign.jpg">
+    <img src="Sign.jpg" alt="Finished and signed artwork">
 
 <!--Congrats-->
   <h5 class="congrats">Congratulations!<br>You've created your very own character!</h5>
