deleted word copyright (left symbol)

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <!--Congrats-->
   <h5 class="congrats">Congratulations!<br>You've created your very own character!</h5>
 
-  <p class="copyright">Copyright©2021 Ella Mueller</p>
+  <p class="copyright">©2021 Ella Mueller</p>
 
 
 </div>
