--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <body>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <div class="main">
 <h1 class="top"><br><br>How To Design A Character</h1>
