--- a/Design-a-character-tuto.html
+++ b/Design-a-character-tuto.html
@@ -9,6 +9,7 @@
     <div class="dropdown">
   <button class="dropbtn">Steps</button>
   <div class="dropdown-content">
+      <a href="Home.html">Home</a>
       <a href="#Introduction">Introduction</a>
       <a href="#Inspiration">Step 1: Find inspiration</a>
       <a href="#Mood-Board">Step 2: Create a mood board</a>
