--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
-  <head><title>Home</title><link rel="stylesheet" href="styles.css"></head>
-  
+  <head><title>Home</title></head>
+  <link rel="stylesheet" href="styles.css">
     <div class="dropdown">
   <button class="dropbtn">Art and tutorials</button>
   <div class="dropdown-content">
