added files and did other stuff

--- a/Design-a-character-tuto.html
+++ b/Design-a-character-tuto.html
@@ -2,14 +2,13 @@
 <html lang=en>
   <head><title>How to design a character</title></head>
       <script src="script.js"></script>
-    <link rel="stylesheet" href="index-style.css">
-  <div class="notmain">
-    <div class="sticky">
-    <div class="navbar">
+    <link rel="stylesheet" href="styles.css">    <div class="dropdown">
+
+    <div class="navbar>">
     <div class="dropdown">
-  <button class="dropbtn">Steps</button>
+  <button class="dropbtn">Home+Steps</button>
   <div class="dropdown-content">
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="#Introduction">Introduction</a>
       <a href="#Inspiration">Step 1: Find inspiration</a>
       <a href="#Mood-Board">Step 2: Create a mood board</a>
@@ -106,7 +105,7 @@
 <!--Congrats-->
   <h5 class="congrats">Congratulations!<br>You've created your very own character!</h5>
 
-  <p class="copyright">©2021 Ella Mueller</p>
+  <div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
 
 
 </div>
