--- a/Mermay2021.html
+++ b/Mermay2021.html
@@ -1,9 +1,16 @@
 <html>
 <head><title>Mermay 2021</title></head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styles.css">
 <body>
+    <div class="dropdown">
+        <button class="dropbtn">Home</button>
+        <div class="dropdown-content">
+            <a href="index.html">Home</a>
+        </div>
+        </div>
 
-<h1>Mermay 2021</h1>
+
+<h1><br><br>Mermay 2021</h1>
 
 <div class="gallery">
   <a target="_blank" href="1-Flower.jpg">
