--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <div class="dropdown">
   <button class="dropbtn">Art and tutorials</button>
   <div class="dropdown-content">
+      <a href="Ocs.html">Character design 2021</a>
       <a href="Design-a-character-tuto.html">How to design a character</a>
+      <a href="Mermay2021.html">Mermay 2021</a>
   </div>
   </div>
 
@@ -13,9 +15,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <h1><br><br>Home</h1>
   <p>Hi! Welcome to my website. You can find my art and tutorials linked in the navigation bar.</p>
 
-  <p class="copyright">©2021 Ella Mueller</p>
+  <div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
 
 
 </div>
