--- a/Design-a-character-tuto.html
+++ b/Design-a-character-tuto.html
@@ -35,6 +35,7 @@
 <div class="main">
 <h1 class="top"><br><br>How To Design A Character</h1>
 
+<div class="design-character"></div>
 <!--Intro-->
   <a id="Introduction"></a>
     <p>Designing a character can be tough. On this website, I'll show you my process for designing and drawing my characters! Let's jump in!</p>
@@ -105,11 +106,11 @@
 <!--Congrats-->
   <h5 class="congrats">Congratulations!<br>You've created your very own character!</h5>
 
-  <div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
+ <p>©2021 Ella Mueller</p>
 
 
 </div>
-
+</div>
 </div>
   </body>
 </html>
