--- a/Mermay2021.html
+++ b/Mermay2021.html
@@ -19,5 +19,7 @@
   <div class="desc">Day 1: Flower</div>
 </div>
 
+<div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
+
 </body>
 </html>
