--- a/Mermay2021.html
+++ b/Mermay2021.html
@@ -19,6 +19,13 @@
   <div class="desc">Day 1: Flower</div>
 </div>
 
+<div class="gallery">
+    <a target="_blank" href="2-Neon.jpg">
+      <img src="2-Neon.jpg">
+    </a>
+    <div class="desc">Day 2: Neon</div>
+  </div>
+
 <div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
 
 </body>
