--- a/Mermay2021.html
+++ b/Mermay2021.html
@@ -26,6 +26,13 @@
     <div class="desc">Day 2: Neon</div>
   </div>
 
+  <div class="gallery">
+    <a target="_blank" href="3-humuhumunukunukuapua'a.jpg">
+      <img src="3-humuhumunukunukuapua'a.jpg">
+    </a>
+    <div class="desc">Day 3: Humuhumunukunukuapua'a</div>
+  </div>
+
 <div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
 
 </body>
