--- a/Mermay2021.html
+++ b/Mermay2021.html
@@ -30,7 +30,14 @@
     <a target="_blank" href="3-humuhumunukunukuapua'a.jpg">
       <img src="3-humuhumunukunukuapua'a.jpg">
     </a>
-    <div class="desc">Day 3: Humuhumunukunukuapua'a</div>
+    <div class="desc">Day 3: Triggerfish</div>
+  </div>
+
+  <div class="gallery">
+    <a target="_blank" href="4-Honey Gourami.jpg">
+      <img src="4-Honey Gourami.jpg">
+    </a>
+    <div class="desc">Day 4: Honey Gourami</div>
   </div>
 
 <div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
