--- a/Mermay2021.html
+++ b/Mermay2021.html
@@ -40,6 +40,13 @@
     <div class="desc">Day 4: Honey Gourami</div>
   </div>
 
+  <div class="gallery">
+    <a target="_blank" href="5-Aurelia aurita.jpg">
+      <img src="5-Aurelia aurita.jpg">
+    </a>
+    <div class="desc">Day 5-Aurelia aurita</div>
+  </div>
+
 <div class="copyright"><p class="copyright"><nobr>©2021 Ella Mueller</nobr></p></div>
 
 </body>
